--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>This is the base organization io page</p>
+<a href="react">Visit our React site</a>
 </body>
 </html>
